--- a/assets/sass/pages/deconnexion/_deconnexion.scss
+++ b/assets/sass/pages/deconnexion/_deconnexion.scss
@@ -27,6 +27,7 @@
         border-radius: 10px;
         display: flex;
         justify-content: center;
+        text-align: center;
         align-items: center;
         height: 100px;
         margin-block-end: 20px;
