--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,6 +196,7 @@ a {
   justify-content: center;
   align-items: center;
   height: 100px;
+  text-align: center;
   margin-block-end: 20px;
   font-weight: bold;
   text-transform: uppercase;
@@ -255,11 +256,68 @@ a {
   border-radius: 10px;
   display: flex;
   justify-content: center;
+  text-align: center;
   align-items: center;
   height: 100px;
   margin-block-end: 20px;
   font-weight: bold;
   text-transform: uppercase;
+}
+
+.formulaire {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  background: #F0F3F4;
+}
+.formulaire .titre {
+  background: #FFFFFF;
+  width: 90vw;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  text-align: center;
+  margin-block-end: 20px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.formulaire form {
+  background: #FFFFFF;
+  width: 90vw;
+  height: auto;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 20px;
+  flex-direction: column;
+}
+.formulaire form label {
+  font-weight: bold;
+  margin-block: 20px;
+}
+.formulaire form input {
+  border: none;
+  background: #F0F3F4;
+  padding: 15px;
+  width: 100%;
+  border-radius: 5px;
+  font-family: "Open Sans";
+  margin-block-start: 20px;
+}
+.formulaire form input[type=submit] {
+  background: #F0F3F4;
+  font-weight: bold;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.formulaire form input[type=submit]:hover {
+  color: red;
 }
 
 /*# sourceMappingURL=style.css.map */
