--- a/assets/sass/base/_common.scss
+++ b/assets/sass/base/_common.scss
@@ -8,7 +8,7 @@ body {
   overflow-x: hidden;
   scroll-behavior: smooth;
   font-size: 1rem;
-  font-family: "Open Sans";
+  font-family: $corps-texte;
   color: $noir;
 }
 
