--- a/assets/sass/pages/accueil/_accueil.scss
+++ b/assets/sass/pages/accueil/_accueil.scss
@@ -29,6 +29,7 @@
         justify-content: center;
         align-items: center;
         height: 100px;
+        text-align: center;
         margin-block-end: 20px;
         font-weight: bold;
         text-transform: uppercase;
