--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -320,4 +320,24 @@ a {
   color: red;
 }
 
+.user {
+  height: 100vh;
+  background: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.user .box_user {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 20px;
+  flex-direction: column;
+  background: #F0F3F4;
+  height: 80vh;
+  width: 90vw;
+  border-radius: 10px;
+}
+
 /*# sourceMappingURL=style.css.map */
