--- a/assets/sass/utils/_variables.scss
+++ b/assets/sass/utils/_variables.scss
@@ -2,5 +2,10 @@
 
 $background: #F0F3F4;
 $blanc : #FFFFFF;
+$gris : #999999;
 $noir : #0e0e0e;
+$bouton : #3F2B96;
+$bleu-clair : #A8C0FF;
 $corps-texte: "Open Sans";
+
+$laptop: 992px;
