--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,15 +143,14 @@ table {
 }
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
+  font-family: "Open Sans";
+  overflow: hidden;
 }
 
 html,
 body {
-  box-sizing: border-box;
-  overflow-x: hidden;
-  scroll-behavior: smooth;
   font-size: 1rem;
-  font-family: "Open Sans";
   color: #0e0e0e;
 }
 
@@ -264,140 +263,99 @@ a {
   text-transform: uppercase;
 }
 
-.header {
-  position: relative;
-  text-align: center;
-  background: linear-gradient(60deg, rgb(84, 58, 183) 0%, rgb(0, 172, 193) 100%);
-  color: white;
-}
-
-.logo {
-  width: 50px;
-  fill: white;
-  padding-right: 15px;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.inner-header {
-  height: 65vh;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-.flex { /*Flexbox for containers*/
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-.waves {
-  position: relative;
-  width: 100%;
-  height: 15vh;
-  margin-bottom: -7px; /*Fix for safari gap*/
-  min-height: 100px;
-  max-height: 150px;
-}
-
-.content {
-  position: relative;
-  height: 20vh;
-  text-align: center;
-  background-color: white;
-}
-
-/* Animation */
-.parallax > use {
-  animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
-}
-
-.parallax > use:nth-child(1) {
-  animation-delay: -2s;
-  animation-duration: 7s;
-}
-
-.parallax > use:nth-child(2) {
-  animation-delay: -3s;
-  animation-duration: 10s;
-}
-
-.parallax > use:nth-child(3) {
-  animation-delay: -4s;
-  animation-duration: 13s;
-}
-
-.parallax > use:nth-child(4) {
-  animation-delay: -5s;
-  animation-duration: 20s;
-}
-
-@keyframes move-forever {
-  0% {
-    transform: translate3d(-90px, 0, 0);
-  }
-  100% {
-    transform: translate3d(85px, 0, 0);
-  }
-}
 .formulaire {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
   height: 100vh;
-  background: #F0F3F4;
+  background: linear-gradient(0deg, #3F2B96 0%, #A8C0FF 100%);
+  padding: 20px;
+  position: relative;
 }
-.formulaire .titre {
+.formulaire p {
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  padding: 20px;
+  color: #FFFFFF;
+}
+.formulaire form {
   background: #FFFFFF;
-  width: 35vw;
+  height: 60vh;
+  width: 90vw;
   border-radius: 10px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
+  align-items: stretch;
+  padding: 20px;
+  flex-direction: column;
+  filter: drop-shadow(0rem 2rem 3rem rgba(0, 0, 0, 0.2));
+}
+.formulaire form .titre {
   height: 100px;
   text-align: center;
   margin-block-end: 20px;
   font-weight: bold;
   text-transform: uppercase;
 }
-.formulaire form {
-  background: #FFFFFF;
-  width: 35vw;
-  height: 50vh;
-  border-radius: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  padding: 20px;
-  flex-direction: column;
-}
-.formulaire form label {
-  font-weight: bold;
-  margin-block: 20px;
-}
-.formulaire form input {
-  border: none;
-  background: #F0F3F4;
-  padding: 15px;
+.formulaire form .corps_form {
+  position: relative;
+  margin-bottom: 15px;
   width: 100%;
+}
+.formulaire form .corps_form label {
+  position: absolute;
+  z-index: 2;
+  top: 13px;
+  left: 10px;
+  background: #FFFFFF;
+  padding: 0 10px;
+  color: #999999;
+  transition: all 0.3s ease;
+}
+.formulaire form .corps_form input {
+  display: block;
+  background: transparent;
+  width: 100%;
+  outline: none;
+  border: solid 1px #999999;
   border-radius: 5px;
+  transition: all 0.3s ease;
+  padding: 15px;
+  font-size: 1rem;
   font-family: "Open Sans";
-  margin-block-start: 20px;
+}
+.formulaire form .corps_form input:focus {
+  border-color: #3F2B96;
+}
+.formulaire form .corps_form input:focus + label, .formulaire form .corps_form input:valid + label {
+  font-size: 1rem;
+  top: -5px;
 }
 .formulaire form input[type=submit] {
-  background: #F0F3F4;
+  border: none;
+  padding: 15px;
+  background: #3F2B96;
+  color: #FFFFFF;
   font-weight: bold;
   text-transform: uppercase;
   cursor: pointer;
   transition: all 0.3s;
+  border-radius: 5px;
 }
 .formulaire form input[type=submit]:hover {
-  color: red;
+  background: #F0F3F4;
+  color: #0e0e0e;
 }
 
+@media screen and (min-width: 992px) {
+  .formulaire form {
+    width: 20vw;
+    height: 50vh;
+    padding: 40px;
+  }
+}
 .user {
   height: 100vh;
   background: white;
