--- a/assets/sass/pages/formulaire/_formulaire.scss
+++ b/assets/sass/pages/formulaire/_formulaire.scss
@@ -1,131 +1,94 @@
-.header {
-    position:relative;
-    text-align:center;
-    background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
-    color:white;
-  }
-  .logo {
-    width:50px;
-    fill:white;
-    padding-right:15px;
-    display:inline-block;
-    vertical-align: middle;
-  }
-  
-  .inner-header {
-    height:65vh;
-    width:100%;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .flex { /*Flexbox for containers*/
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
-  
-  .waves {
-    position:relative;
-    width: 100%;
-    height:15vh;
-    margin-bottom:-7px; /*Fix for safari gap*/
-    min-height:100px;
-    max-height:150px;
-  }
-  
-  .content {
-    position:relative;
-    height:20vh;
-    text-align:center;
-    background-color: white;
-  }
-  
-  /* Animation */
-  
-  .parallax > use {
-    animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
-  }
-  .parallax > use:nth-child(1) {
-    animation-delay: -2s;
-    animation-duration: 7s;
-  }
-  .parallax > use:nth-child(2) {
-    animation-delay: -3s;
-    animation-duration: 10s;
-  }
-  .parallax > use:nth-child(3) {
-    animation-delay: -4s;
-    animation-duration: 13s;
-  }
-  .parallax > use:nth-child(4) {
-    animation-delay: -5s;
-    animation-duration: 20s;
-  }
-  @keyframes move-forever {
-    0% {
-     transform: translate3d(-90px,0,0);
-    }
-    100% { 
-      transform: translate3d(85px,0,0);
-    }
-  }
-
 .formulaire {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  background: linear-gradient(0deg, $bouton 0%, $bleu-clair 100%);
+  padding: 20px;
+  position: relative;
+  p {
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    padding: 20px;
+    color: $blanc;
+  }
+  form {
+    background: $blanc;
+    height: 60vh;
+    width: 90vw;
+    border-radius: 10px;
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: space-between;
+    align-items: stretch;
+    padding: 20px;
     flex-direction: column;
-    height: 100vh;
-    background: $background;
-    .titre{
-        background: $blanc;
-        width: 35vw;
-        border-radius: 10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100px;
-        text-align: center;
-        margin-block-end: 20px;
-        font-weight: bold;
-        text-transform: uppercase;
+    filter: drop-shadow(0rem 2rem 3rem rgba(0, 0, 0, 0.2));
+    .titre {
+      height: 100px;
+      text-align: center;
+      margin-block-end: 20px;
+      font-weight: bold;
+      text-transform: uppercase;
     }
-    form{
+    .corps_form {
+      position: relative;
+      margin-bottom: 15px;
+      width: 100%;
+      label {
+        position: absolute;
+        z-index: 2;
+        top: 13px;
+        left: 10px;
         background: $blanc;
-        width: 35vw;
-        height: 50vh;
-        border-radius: 10px;
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-        padding: 20px;
-        flex-direction: column;
-        label{
-            font-weight: bold;
-            margin-block: 20px;
+        padding: 0 10px;
+        color: $gris;
+        transition: all 0.3s ease;
+      }
+      input {
+        display: block;
+        background: transparent;
+        width: 100%;
+        outline: none;
+        border: solid 1px $gris;
+        border-radius: 5px;
+        transition: all 0.3s ease;
+        padding: 15px;
+        font-size: 1rem;
+        font-family: $corps-texte;
+        &:focus {
+          border-color: $bouton;
         }
-        input{
-            border: none;
-            background: $background;
-            padding: 15px;
-            width: 100%;
-            border-radius: 5px;
-            font-family: $corps-texte;
-            margin-block-start: 20px;
+        &:focus + label,
+        &:valid + label {
+          font-size: 1rem;
+          top: -5px;
         }
-        input[type="submit"]{
-            background: $background;
-            font-weight: bold;
-            text-transform: uppercase;
-            cursor: pointer;
-            transition: all 0.3s;
-            &:hover{
-                color: red;
-            }
-        }
+      }
     }
+    input[type="submit"] {
+      border: none;
+      padding: 15px;
+      background: $bouton;
+      color: $blanc;
+      font-weight: bold;
+      text-transform: uppercase;
+      cursor: pointer;
+      transition: all 0.3s;
+      border-radius: 5px;
+      &:hover {
+        background: $background;
+        color: $noir;
+      }
+    }
+  }
 }
 
-
+@media screen and (min-width: $laptop) {
+  .formulaire form {
+     width: 20vw;
+     height: 50vh;
+     padding: 40px;
+   }
+}
