--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -21,6 +21,14 @@
 
 @import "./pages/formulaire/formulaire";
 
+// Login
+
+@import "./pages/login/login";
+
 // Users
 
 @import "./pages/user/user";
+
+// Admin
+
+@import "./pages/admin/admin";
