--- a/assets/sass/pages/admin/_admin.scss
+++ b/assets/sass/pages/admin/_admin.scss
@@ -1,14 +1,14 @@
-.user {
+.admin {
     height: 100vh;
     background: linear-gradient(0deg, $bouton 0%, $bleu-clair 100%);
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    .box_user {
+    .box_admin {
         display: flex;
         justify-content: space-between;
-        align-items: stretch;
+        align-items: flex-end;
         padding: 20px;
         flex-direction: column;
         background: $background;
@@ -25,7 +25,7 @@
             font-weight: bold;
             text-transform: uppercase;
         }
-        .corps_user{
+        .corps_admin{
             background: $blanc;
             padding: 20px;
             width: 100%;
@@ -46,7 +46,6 @@
                 padding: 15px;
                 border-radius: 5px;
                 transition: all 0.3s;
-                text-align: center;
                 width: 100%;
                 &:hover {
                     color: $background;
@@ -57,7 +56,7 @@
 }
 
 @media screen and (min-width: $laptop) {
-    .user .box_user {
+    .admin .box_admin {
         width: 400px;
         height: 50vh;
         margin: 5rem;
@@ -68,10 +67,12 @@
             flex-direction: column;
             align-items: center;
             a {
-                background: $blanc;
+                background: $bouton;
                 padding: 15px;
+                color: $blanc;
                 border-radius: 5px;
                 transition: all 0.3s;
+                text-align: center;
                 width: 100%;
                 &:hover {
                     color: $background;
